--- a/index.html
+++ b/index.html
@@ -3,10 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gamer</title>
+    <title>B8A2-Gamer</title>
+    <link rel="icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
+    <!-- header section -->
+
+    <header>
+        <!-- Navbar section -->
+
+        <nav>
+            <div class="nav-container">
+                <div class="nav-icon">
+                    <img src="./images/Frame.png" alt="coming">
+                    <h1><span class="icon-text">G</span>amer</h1>
+                </div>
+                <div class="nav-content">
+                    <div class="nav-element">
+                        <li>About Us</li>
+                        <li>Developers</li>
+                    </div>
+                    <div class="nav-title">
+                        <p class="nav-element">Follow Us On</p>
+                        <img class="title-icon" src="./images/Vector.svg" alt="coming">
+                        <img class="title-icon" src="./images/tik-tok 1.svg" alt="coming">
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
