--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 </div>
                 <div class="nav-content">
                     <div class="nav-element">
-                        <li>About Us</li>
-                        <li>Developers</li>
+                        <li><a href="">About Us</a></li>
+                        <li><a href="">Developers</a></li>
                     </div>
                     <div class="nav-title">
                         <p class="nav-element">Follow Us On</p>
@@ -33,6 +33,27 @@
                 </div>
             </div>
         </nav>
+
+        <!-- banner section -->
+
+        <div class="bannner-container">
+            <div class="banner-content">
+                <div class="banner-text">
+                    <h3 class="banner-title-1">Play Like The</h3>
+                    <h1 class="banner-title-2">G.O.A.T.</h1>
+                    <ul class="banner-description">
+                        <li>1-Click instant play</li>
+                        <li>No Download</li>
+                        <li>1000s of supported online games</li>
+                    </ul>
+                    <button class="btn-1">SIGN IN</button>
+                    <button class="btn-2">GO ROGUE</button>
+                </div>
+            </div>
+            <div class="banner-images">
+               <img class="banner-img" src="./images/Group 18.png" alt="coming">
+            </div>
+        </div>
     </header>
 </body>
 </html>
