--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,9 @@
     <link rel="icon" href="./images/Frame.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+
     <!-- header section -->
 
     <header>
@@ -51,9 +53,100 @@
                 </div>
             </div>
             <div class="banner-images">
-               <img class="banner-img" src="./images/Group 18.png" alt="coming">
+                <img class="banner-img" src="./images/Group 18.png" alt="coming">
             </div>
         </div>
     </header>
+
+    <!-- main section -->
+
+    <main>
+
+        <!-- section-1 -->
+
+        <section>
+            <div class="sec1-container">
+                <h1 class="sec1-title1">Online Games <span class="sec1-title1-text">Funny Videos</span></h1>
+                <p class="sec1-title2">A Collection of Hilarious Videos to Brighten Your Day</p>
+                <div class="sec1-content">
+                    <div class="card">
+                        <img class="card-img" src="./images/Rectangle 4.png" alt="">
+                        <p class="card-description">No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                    <div class="card">
+                        <img class="card-img" src="./images/Rectangle 5.png" alt="">
+                        <p class="card-description">Did you score? #unblockedgames #school</p>
+                    </div>
+                    <div class="card">
+                        <img class="card-img" src="./images/Rectangle 6.png" alt="">
+                        <p class="card-description">Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                    <div class="card">
+                        <img class="card-img" src="./images/Rectangle 7.png" alt="">
+                        <p class="card-description">Breaking game records like OG</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- section-2 -->
+
+        <section>
+            <div class="sec2-container">
+                <div class="sec2-content">
+                    <h1 class="sec1-title1"><span class="sec1-title1-text">Play Instantly,</span><br>No Downloads <br>No Installs.</h1>
+                    <p class="sec1-title2">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                </div>
+                <div class="sec2-images">
+                    <img class="sec2-img1" src="./images/Rectangle 55.png" alt="">
+                    <img class="sec2-img2" src="./images/Rectangle 66.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- section-3 -->
+
+        <section>
+            <div class="sec3-container">
+                <div class="sec3-box">
+                    <img src="./images/Rectangle 11.png" alt="" class="sec3-box-img">
+                    <h3>Action Games</h3>
+                </div>
+                <div class="sec3-box">
+                    <img src="./images/Rectangle 12.png" alt="" class="sec3-box-img">
+                    <h3>Adventure Games</h3>
+                </div>
+                <div class="sec3-box">
+                    <img src="./images/Rectangle 13.png" alt="" class="sec3-box-img">
+                    <h3>Arcade Games</h3>
+                </div>
+                <div class="sec3-box">
+                    <img src="./images/Rectangle 14.png" alt="" class="sec3-box-img">
+                    <h3>Educational Games</h3>
+                </div>
+                <div class="sec3-box">
+                    <img src="./images/Rectangle 15.png" alt="" class="sec3-box-img">
+                    <h3>Word Games</h3>
+                </div>
+                <div class="sec3-box">
+                    <img src="./images/Rectangle 16.png" alt="" class="sec3-box-img">
+                    <h3>Role Palying Games</h3>
+                </div>
+                <div class="sec3-box">
+                    <img src="./images/Rectangle 17.png" alt="" class="sec3-box-img">
+                    <h3>Music & Audio Games</h3>
+                </div>
+                <div class="sec3-box">
+                    <img src="./images/Rectangle 18.png" alt="" class="sec3-box-img">
+                    <h3>Puzzle Games</h3>
+                </div>
+                <div class="sec3-box">
+                    <img src="./images/Rectangle 19.png" alt="" class="sec3-box-img">
+                    <h3>Strategy Games</h3>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
+
 </html>
