--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <!-- section-3 -->
 
         <section>
-            <div class="sec3-container">
+            <div class="sec3-container1">
                 <div class="sec3-box">
                     <img src="./images/Rectangle 11.png" alt="" class="sec3-box-img">
                     <h3>Action Games</h3>
@@ -128,6 +128,8 @@
                     <img src="./images/Rectangle 15.png" alt="" class="sec3-box-img">
                     <h3>Word Games</h3>
                 </div>
+            </div>
+            <div class="sec3-container2">
                 <div class="sec3-box">
                     <img src="./images/Rectangle 16.png" alt="" class="sec3-box-img">
                     <h3>Role Palying Games</h3>
@@ -147,6 +149,39 @@
             </div>
         </section>
     </main>
+
+    <!-- footer section -->
+
+    <footer>
+        <div class="footer-container">
+            <div class="footer-title nav-icon">
+                <img src="./images/Frame.png" alt="">
+                <h1><span class="icon-text">G</span>amer</h1>
+            </div>
+            <div>
+                <ul class="footer-content">
+                    <li>Our Story</li>
+                    <li>Games</li>
+                    <li>Web Games</li>
+                    <li>Careers</li>
+                    <li>Support</li>
+                    <li>My Account</li>
+                </ul>
+            </div>
+            <div class="footer-icons">
+                <a href=""><img src="./images/group48.svg" alt="" class="footer-img"></a>
+                <a href=""><img src="./images/Group49.svg" alt="" class="footer-img"></a>
+                <a href=""><img src="./images/group50.svg" alt="" class="footer-img"></a>
+            </div>
+            <div class="footer-description">
+                <li>Terms and Conditions</li>
+                <li>Privacy Policy</li>
+                <li>Cookie Policy</li>
+                <li>Privacy Settings</li>
+            </div>
+            <p class="footer-description">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
+    </footer>
 </body>
 
 </html>
