--- a/index.html
+++ b/index.html
@@ -107,44 +107,60 @@
         <!-- section-3 -->
 
         <section>
-            <div class="sec3-container1">
-                <div class="sec3-box">
-                    <img src="./images/Rectangle 11.png" alt="" class="sec3-box-img">
-                    <h3>Action Games</h3>
+            <div class="sec3-container">
+                <div>
+                    <button class="sec3-box">
+                        <img src="./images/Rectangle 11.png" alt="" class="sec3-box-img">
+                        <h3>Action Games</h3>
+                    </button>
                 </div>
-                <div class="sec3-box">
-                    <img src="./images/Rectangle 12.png" alt="" class="sec3-box-img">
-                    <h3>Adventure Games</h3>
+                <div>
+                    <button class="sec3-box">
+                        <img src="./images/Rectangle 12.png" alt="" class="sec3-box-img">
+                        <h3>Adventure Games</h3>
+                    </button>
                 </div>
-                <div class="sec3-box">
-                    <img src="./images/Rectangle 13.png" alt="" class="sec3-box-img">
-                    <h3>Arcade Games</h3>
+                <div>
+                    <button class="sec3-box">
+                        <img src="./images/Rectangle 13.png" alt="" class="sec3-box-img">
+                        <h3>Arcade Games</h3>
+                    </button>
                 </div>
-                <div class="sec3-box">
-                    <img src="./images/Rectangle 14.png" alt="" class="sec3-box-img">
-                    <h3>Educational Games</h3>
+                <div>
+                    <button class="sec3-box">
+                        <img src="./images/Rectangle 14.png" alt="" class="sec3-box-img">
+                        <h3>Educational Games</h3>
+                    </button>
                 </div>
-                <div class="sec3-box">
-                    <img src="./images/Rectangle 15.png" alt="" class="sec3-box-img">
-                    <h3>Word Games</h3>
+                <div>
+                    <button class="sec3-box">
+                        <img src="./images/Rectangle 15.png" alt="" class="sec3-box-img">
+                        <h3>Word Games</h3>
+                    </button>
                 </div>
-            </div>
-            <div class="sec3-container2">
-                <div class="sec3-box">
-                    <img src="./images/Rectangle 16.png" alt="" class="sec3-box-img">
-                    <h3>Role Palying Games</h3>
+                <div>
+                    <button class="sec3-box">
+                        <img src="./images/Rectangle 16.png" alt="" class="sec3-box-img">
+                        <h3>Role Palying Games</h3>
+                    </button>
                 </div>
-                <div class="sec3-box">
-                    <img src="./images/Rectangle 17.png" alt="" class="sec3-box-img">
-                    <h3>Music & Audio Games</h3>
+                <div>
+                    <button class="sec3-box">
+                        <img src="./images/Rectangle 17.png" alt="" class="sec3-box-img">
+                        <h3>Music & Audio Games</h3>
+                    </button>
                 </div>
-                <div class="sec3-box">
-                    <img src="./images/Rectangle 18.png" alt="" class="sec3-box-img">
-                    <h3>Puzzle Games</h3>
+                <div>
+                    <button class="sec3-box">
+                        <img src="./images/Rectangle 18.png" alt="" class="sec3-box-img">
+                        <h3>Puzzle Games</h3>
+                    </button>
                 </div>
-                <div class="sec3-box">
-                    <img src="./images/Rectangle 19.png" alt="" class="sec3-box-img">
-                    <h3>Strategy Games</h3>
+                <div>
+                    <button class="sec3-box">
+                        <img src="./images/Rectangle 19.png" alt="" class="sec3-box-img">
+                        <h3>Strategy Games</h3>
+                    </button>
                 </div>
             </div>
         </section>
@@ -158,28 +174,26 @@
                 <img src="./images/Frame.png" alt="">
                 <h1><span class="icon-text">G</span>amer</h1>
             </div>
-            <div>
-                <ul class="footer-content">
-                    <li>Our Story</li>
-                    <li>Games</li>
-                    <li>Web Games</li>
-                    <li>Careers</li>
-                    <li>Support</li>
-                    <li>My Account</li>
-                </ul>
-            </div>
+            <ul class="footer-content">
+                <li>Our Story</li>
+                <li>Games</li>
+                <li>Web Games</li>
+                <li>Careers</li>
+                <li>Support</li>
+                <li>My Account</li>
+            </ul>
             <div class="footer-icons">
                 <a href=""><img src="./images/group48.svg" alt="" class="footer-img"></a>
                 <a href=""><img src="./images/Group49.svg" alt="" class="footer-img"></a>
                 <a href=""><img src="./images/group50.svg" alt="" class="footer-img"></a>
             </div>
-            <div class="footer-description">
-                <li>Terms and Conditions</li>
-                <li>Privacy Policy</li>
-                <li>Cookie Policy</li>
-                <li>Privacy Settings</li>
-            </div>
-            <p class="footer-description">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+                <ul class="footer-description1">
+                    <li>Terms and Conditions</li>
+                    <li>Privacy Policy</li>
+                    <li>Cookie Policy</li>
+                    <li>Privacy Settings</li>
+                </ul>
+                <p class="footer-description2">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
         </div>
     </footer>
 </body>
